name:                advent2016hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/advent2016hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Navigation
                     , Assembunny
                     , Bathroom
                     , Bots
                     , Compression
                     , Cubicles
                     , Door
                     , Dragon
                     , Firewall
                     , IP7
                     , Microchips
                     , OneTimePad
                     , Password
                     , Presents
                     , Rooms
                     , Signal
                     , Triangles
                     , TwoSteps
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , containers >= 0.5.7.1
                     , cryptonite
                     , heap
                     , mtl >= 2.2.1
                     , trifecta
                     , utf8-string >= 1.0.1.1
                     , vector >= 0.11.0.0
  default-language:    Haskell2010

executable advent2016hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       advent2016hs
                     , base
                     , utf8-string >= 1.0.1.1
  default-language:    Haskell2010

test-suite advent2016hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent2016hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/advent2016hs
